--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 
+        <link rel="icon" href="favicon-48x48.cbbd161b.png" />
+        <link rel="apple-touch-icon" href="apple-touch-icon.6803c6f0.png" />
+
         <link href="css/main.css" type="text/css" rel="stylesheet" />
         
     </head>
