--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-        <title>Mickael Randriamihaja</title>
+        <title>Mickael Randriamihaja | WDD 130</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap" rel="stylesheet">
@@ -12,15 +12,85 @@
         <link rel="icon" href="favicon-48x48.png" />
         <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
-        <link href="css/main.css" type="text/css" rel="stylesheet" />
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Madimi+One&display=swap');
+
+            .madimi-one-regular {
+                font-family: "Madimi One", sans-serif;
+                font-weight: 400;
+                font-style: normal;
+            }
+
+            body {
+                font-family: Roboto;
+            }
+            h1 {
+                font-family: "Madimi One";
+            }
+
+            nav {    
+                padding:15px 10px;
+                background:#000000;
+            }
+
+            nav a {
+                padding: 15px 25px;
+                color:#FFFFFF;
+                text-decoration: none;    
+            }
+
+            nav a:hover {
+                color:#000000;
+                background:#FFFFFF;
+            }
+
+            .profile-thumb {
+                border-radius:50%;
+                border:1px solid #000000;
+                padding:10px;
+            }
+
+            .content-home {
+                display:flex;
+                margin-left:25px;
+                margin-right:25px;
+            }
+            .thumb {
+                width:30%
+            }
+            .content-text {
+                width:70%;
+            }
+            footer {
+                text-align:center;
+            }
+            blockquote {
+                padding:25px 50px 25px 10px;
+            }
+            blockquote span {
+                font-style: italic;
+            }
+
+            @media only screen and (max-width: 768px) {
+                .content-home {
+                    display:block;
+                }    
+                .thumb img {        
+                    text-align: center;
+                }
+                .content-home div {
+                    width: 100%;
+                }
+            }
+        </style>
         
     </head>
     <body>
         <header>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="resume.html">My CV</a>
-                <a href="sitemap.html">Sitemap</a>
+                <a href="#">My CV</a>
+                <a href="#">Sitemap</a>
             </nav>
         </header>
         <main>
@@ -28,7 +98,7 @@
             <section class="content-home">                
                 
                 <div class="thumb">
-                    <img src="https://avatars.githubusercontent.com/u/48972976?v=4" alt="Mickael Randriamihaja web developer" width="260" height="260" class="profile-thumb" />
+                    <img src="images/profile.jpg" alt="Mickael Randriamihaja web developer" width="200" height="200" class="profile-thumb" />
                 </div>
                 <div class="content-text">
                     <p>Hello!<br><br> I am <strong>Mickael H. Randriamihaja</strong>, I am from Antananarivo, Madagascar. I enjoy reading (technologies, sciences, DIY, home design, gardening, farming), playing football and chess, travel and admiring natures.</p>
