update: change state or country content

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </section>
         </main>
         <aside>
-            <h2>Antananarivo, Madagascar</h2>
+            <h2>Madagascar</h2>
             <img src="images/antananarivo-madagascar.jpg" alt="Antananarivo, capitale of Madagascar" width="200" />
             <p>
                 Antananarivo, capitale and largest city of Madagascar. It sits at 1,280m above the sea level in the extreme center of the island.
