update: changes style guides, typos

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -20,28 +20,38 @@
     </head>
     <body>
         <header>
-            <h1>Rafting Site Plan</h1>
+            <h1>Blue Orange Rafting</h1>
             <div class="author-name">
                 Mickael Randriamihaja
             </div>
+            <nav>
+                <a href="#">Home</a>
+                <a href="#">About us</a>
+                <a href="#">Trips</a>
+                <a href="#">Contact us</a>
+            </nav>
         </header>
         <main>
             <section>
                 <h2>Overview</h2>
                 <h3>Purpose</h3>
-                <p>Lorem ipsum overview text</p>
+                <p>Recreational outdoor activities, adventures on water in group or families.</p>
                 <h3>Audience</h3>
-                <p>Lorem ipsum audience text</p>
-                <h2>Branding</h2>
+                <p>Tourists, families or visitors looking for activities while on vacation, die-hard water rafters, competition rafting organizers.</p>
+                <h2>Blue Orange Rafting</h2>
                 <h3>Website logo</h3>
-                <img src="images/logo.jpg" alt="Rafting Site logo" />
+                <img src="https://byui-cse.github.io/wdd130-ww-course/resources/images/logos/rafinglogo.png" alt="Rafting Site logo" />
             </section>
             <section>
                 <h2>Style guide</h2>
                 <h3>Color palette</h3>
-                <p>Lorem ipsum color palette</p>
+                <p>primary-color: #0091e7 <span class="bg-primary small-box"></span><br>
+                    secondary-color: #21075e <span class="bg-secondary small-box"></span><br>
+                    accent1-color: #f8750e <span class="bg-accent1 small-box"></span><br>
+                    accent2-color: #fff915 <span class="bg-accent2 small-box"></span>
+                </p>
                 <h3>Typography</h3>
-                <h4>Headings Example Font</h4>
+                <h4>Monserrat (sans serif, more clean)</h4>
                 <h4>Normal Text/Paragraph Example Font</h4>
                 <p>Lorem ipsum normal text paragraph example font</p>
                 <h4>Colored Callout Example Font</h4>
