update: styles changes

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -35,9 +35,16 @@
             <section>
                 <h2>Overview</h2>
                 <h3>Purpose</h3>
-                <p>Recreational outdoor activities, adventures on water in group or families.</p>
+                <p>Recreational outdoor activities, adventures on water in group or families.
+                    <br><strong>Share information to future customers, build revenues.</strong>
+                </p>
                 <h3>Audience</h3>
-                <p>Tourists, families or visitors looking for activities while on vacation, die-hard water rafters, competition rafting organizers.</p>
+                <p>
+                    The main targets are Tourists, families,  visitors, die-hard water rafters, competition rafting organizers.<br>
+                    For all type of budgets.<br>
+                    Those who are looking for activities while on vacation, for competition on water.<br>
+                    The pages will be responsive and automatically be adjusted for desktop, mobile and desktop displays.
+                </p>
                 <h2>Blue Orange Rafting</h2>
                 <h3>Website logo</h3>
                 <img src="https://byui-cse.github.io/wdd130-ww-course/resources/images/logos/rafinglogo.png" alt="Rafting Site logo" />
