--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-        <title>Mickael Randriamihaja Site plan Rafting | WDD 130</title>
+        <title>Blue Orange Rafting Site Plan Rafting | WDD 130</title>
         <meta name="description" content="Site plan Rafting page by Mickael Randriamihaja on Github W02 - WDD130" />
         <meta name="author" content="Mickael Randriamihaja" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,16 +20,10 @@
     </head>
     <body>
         <header>
-            <h1>Blue Orange Rafting</h1>
+            <h1>Blue Orange Rafting Blue Orange Rafting</h1>
             <div class="author-name">
                 Mickael Randriamihaja
             </div>
-            <nav>
-                <a href="#">Home</a>
-                <a href="#">About us</a>
-                <a href="#">Trips</a>
-                <a href="#">Contact us</a>
-            </nav>
         </header>
         <main>
             <section>
