update: meta description

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
         <title>Blue Orange Rafting Site Plan Rafting | WDD 130</title>
-        <meta name="description" content="Site plan Rafting page by Mickael Randriamihaja on Github W02 - WDD130" />
+        <meta name="description" content="Blue Orange Site Plan Rafting page by Mickael Randriamihaja on Github W02 - WDD130" />
         <meta name="author" content="Mickael Randriamihaja" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
