--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -34,9 +34,14 @@
                 </p>
                 <h3>Audience</h3>
                 <p>
+                    <strong>Who are the target customers?</strong><br>
                     The main targets are Tourists, families,  visitors, die-hard water rafters, competition rafting organizers.<br>
-                    For all type of budgets.<br>
-                    Those who are looking for activities while on vacation, for competition on water.<br>
+                    For all type of budgets. From 18 years old to adult.<br><br>
+                    <strong>What do customers want?</strong><br>
+                    Informations about the services, the equipments, date of events, contact and reservation.<br>
+                    Those who are looking for activities while on vacation, for competition on water
+                    <br><br>
+                    <strong>How will audience access to my site?</strong><br>                    
                     The pages will be responsive and automatically be adjusted for desktop, mobile and desktop displays.
                 </p>
                 <h2>Blue Orange Rafting</h2>
