update: color changes

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -51,10 +51,12 @@
             <section>
                 <h2>Style guide</h2>
                 <h3>Color palette</h3>
-                <p>primary-color: #0091e7 <span class="bg-primary small-box"></span><br>
-                    secondary-color: #21075e <span class="bg-secondary small-box"></span><br>
-                    accent1-color: #f8750e <span class="bg-accent1 small-box"></span><br>
-                    accent2-color: #fff915 <span class="bg-accent2 small-box"></span>
+                <p>primary-color: #072AC8 <span class="bg-primary small-box"></span><br>
+                    secondary-color: #1E96FC <span class="bg-secondary small-box"></span><br>
+                    accent1-color: #FCF300 <span class="bg-accent1 small-box"></span><br>
+                    accent2-color: #FFC600 <span class="bg-accent2 small-box"></span>
+
+                    Palette URL : <a href="https://coolors.co/072ac8-1e96fc-a2d6f9-fcf300-ffc600" target="_blank">https://coolors.co/072ac8-1e96fc-a2d6f9-fcf300-ffc600</a>
                 </p>
                 <h3>Typography</h3>
                 <h4>Monserrat (sans serif, more clean)</h4>
