home page enhancement

--- a/index.html
+++ b/index.html
@@ -38,6 +38,23 @@
                     </blockquote>
                 </div>
             </section>
+            <ul>
+                <li>
+                    <a href="https://www.churchofjesuschrist.org/temples/details/rexburg-idaho-temple" target="_blank">
+                        Rexburg Idaho Temple
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.churchofjesuschrist.org/temples/details/detroit-michigan-temple" target="_blank">
+                        Detroit Michigan Temple
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.churchofjesuschrist.org/temples/details/madrid-spain-temple" target="_blank">
+                        Madrid Spain Temple
+                    </a>
+                </li>
+            </ul>
         </main>
         <aside>
             <h2>Madagascar</h2>
@@ -53,3 +70,4 @@
         </footer>
     </body>
 </html>
+<!-- Last modified: 03/12/2024 22:38-->
