Home page enhancement W03

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <meta charset="utf-8" />
+        <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-        <title>Mickael Randriamihaja Github Home page | WDD 130</title>
+        <title>Mickael Randriamihaja Github Home page | WDD 130 - W03</title>
         <meta name="description" content="Home page enhancement of Mickael Randriamihaja on Github for the assignement WDD130" />
         <meta name="author" content="Mickael Randriamihaja" />
 
