update: About us meta desc

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-        <title>About US - Orange Rafting Site Plan Rafting | WDD 130</title>
-        <meta name="description" content="About us Page - Blue Orange Site Plan Rafting page by Mickael Randriamihaja on Github W03 - WDD130" />
+        <title>About us page W03 - Rafting</title>
+        <meta name="description" content="About us Page - Rafting W03 - WDD130" />
         <meta name="author" content="Mickael Randriamihaja" />
         
         <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
