--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <meta charset="utf-8" />
+        <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-        <title>About us page W03 - Rafting</title>
+        <title>About us Blue Orange Rafting plan | W03 - Rafting</title>
         <meta name="description" content="About us Page - Rafting W03 - WDD130" />
         <meta name="author" content="Mickael Randriamihaja" />
         
@@ -60,11 +60,11 @@
             <section class="adventure mt-50">
                 <h2>Adventure Awaits You!</h2>
                 <div class="gallery">
-                    <img src="images/adventure-1.jpg" alt="Advanture 1" width="648" />
-                    <img src="images/adventure-2.jpg" alt="Advanture 2" width="648" />
-                    <img src="images/adventure-3.jpg" alt="Advanture 3" width="648" />
-                    <img src="images/adventure-4.jpg" alt="Advanture 4" width="648" />
-                    <img src="images/adventure-5.jpg" alt="Advanture 5" width="648" />
+                    <figure><img src="images/adventure-1.jpg" alt="Advanture 1" width="648" /></figure>
+                    <figure><img src="images/adventure-2.jpg" alt="Advanture 2" width="648" /></figure>
+                    <figure><img src="images/adventure-3.jpg" alt="Advanture 3" width="648" /></figure>
+                    <figure><img src="images/adventure-4.jpg" alt="Advanture 4" width="648" /></figure>
+                    <figure><img src="images/adventure-5.jpg" alt="Advanture 5" width="648" /></figure>
                 </div>
             </section>
         </main>
