--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-        <title>About us Blue Orange Rafting Company name | W03 - Rafting</title>
+        <title>About us | Blue Orange Rafting Company name | W03</title>
         <meta name="description" content="About us Page - Rafting W03 - WDD130" />
         <meta name="author" content="Mickael Randriamihaja" />
         
