--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
         <title>About us | Blue Orange Rafting Company name | W03</title>
-        <meta name="description" content="About us Page - Rafting W03 - WDD130" />
+        <meta name="description" content="About us Blue Orange Rafting Company - Rafting W03 - WDD130" />
         <meta name="author" content="Mickael Randriamihaja" />
         
         <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
