About us - changes

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-        <title>About us | Blue Orange Rafting Company name | W03</title>
+        <title>About us page Blue Orange Rafting Company name | W03 assignement</title>
         <meta name="description" content="About us Blue Orange Rafting Company - Rafting W03 - WDD130" />
         <meta name="author" content="Mickael Randriamihaja" />
         
