--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-        <title>About us page Blue Orange Rafting Company name | W03 assignement</title>
+        <title>About Us Blue Orange Rafting Company name | W03 assignment</title>
         <meta name="description" content="About us Blue Orange Rafting Company - Rafting W03 - WDD130" />
         <meta name="author" content="Mickael Randriamihaja" />
         
