About Us - Changes

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -53,12 +53,13 @@
                 <h2>History</h2>
                 
                 <p>
-                    Donec sit amet gravida dolor, quis efficitur elit. Phasellus tincidunt placerat eros sit amet lacinia. Sed a magna mattis, iaculis tellus id, congue lorem. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent ac mauris non ligula pretium placerat id sed lorem. In dui urna, euismod non rhoncus id, ultrices eget ligula. In vehicula cursus purus a pretium.
+                    With ten years of experience in the world of tourism and entertainment, the founders of Orange Blue rafting are experts in this field and plan to bring added value to different audiences.
                 </p>         
                 
             </section>
             <section class="adventure mt-50">
                 <h2>Adventure Awaits You!</h2>
+                <p>Adventures within everyone's reach, fun, sensation and dynamic activities</p>
                 <div class="gallery">
                     <figure><img src="images/adventure-1.jpg" alt="Advanture 1" width="648" /></figure>
                     <figure><img src="images/adventure-2.jpg" alt="Advanture 2" width="648" /></figure>
