--- a/wwr/about.html
+++ b/wwr/about.html
@@ -44,7 +44,7 @@
                         <img src="images/hero-happy-client.jpg" alt="Happy Client" />
                         <figcaption>Happy client</figcaption>
                     </figure>
-                    <p> Praesent ac mauris non ligula pretium placerat id sed lorem. <br />
+                    <p>Make client happy and memorize activities for long time<br />
                         <a href="https://www.freepik.com/free-vector/customer-giving-quality-feedback_8270988.htm#query=happy%20customer&position=29&from_view=keyword&track=ais&uuid=ba2d8d0d-64b1-429b-b474-7be91b9b00fc">Image by pch.vector</a> on Freepik
                     </p>
                 </article>                
