--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>WDD 130 | Course Home - Quizz Form</title>
-        <link href="styles/quizz.css" type="text/css" rel="stylesheet" />
+        <link href="styles/quiz.css" type="text/css" rel="stylesheet" />
     </head>
     <body>
         <header>
