W05 - Quizz form changes

--- a/quiz.html
+++ b/quiz.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="description" content="Quizz Form W05 - WDD130" />
+        <meta name="author" content="Mickael Randriamihaja" />
         <title>WDD 130 | Course Home - Quizz Form</title>
         <link href="styles/quiz.css" type="text/css" rel="stylesheet" />
     </head>
@@ -35,7 +37,8 @@
 
                     <div class="form-element p20">
                         <label for="q4" class="mb10 d-block"><span class="number">4</span> What is the bottom margin given this declaration?</label>           
-                        <input type="text" id="q4" name="q4" class="form-input" />
+                        <code>margin: 10px 5px 15px</code>
+                        <input type="input" id="q4" name="q4" class="form-input" />
                     </div>
                 </fieldset>
               
