--- a/quiz.html
+++ b/quiz.html
@@ -27,11 +27,11 @@
                     </div>
                     <div class="form-element p20">
                         <label for="q3" class="mb10 d-block"><span class="number">3</span> Which of the following is  a valid CSS comment?</label>
-                        <select name="q3" id="q3" placeholder="Choose one" class="form-input">
+                        <select name="q3" id="q3" class="form-input">
                             <option value="" selected disabled>Choose one</option>
                             <option value="">/* Comment here */</option>
                             <option value="">//</option>
-                            <option value="">< !-- -- ></option>
+                            <option value="">&sup1; !-- -- &s</option>
                         </select>
                     </div>
 
