W05 - Quizz form change

--- a/quiz.html
+++ b/quiz.html
@@ -38,7 +38,7 @@
                     <div class="form-element p20">
                         <label for="q4" class="mb10 d-block"><span class="number">4</span> What is the bottom margin given this declaration?</label>           
                         <code>margin: 10px 5px 15px</code>
-                        <input type="input" id="q4" name="q4" class="form-input" />
+                        <input type="number" id="q4" name="q4" class="form-input" />
                     </div>
                 </fieldset>
               
