W03 - Contact page change

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -98,6 +98,8 @@
                     <figure><img src="images/employee-1.png" alt="Employee 1" width="648" /></figure>
                     <figure><img src="images/employee-2.png" alt="Employee 2" width="648" /></figure>
                     <figure><img src="images/employee-3.png" alt="Employee 3" width="648" /></figure>
+                    <figure><img src="images/employee-4.png" alt="Employee 4" width="648" /></figure>
+                    <figure><img src="images/employee-5.png" alt="Employee 5" width="648" /></figure>
                 </div>
             </section>
         </main>
