--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -87,6 +87,7 @@
                 
             </section>
             <section class="map mt-50">
+                <h2>Map</h2>
                 <div class="map">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7547.757685288192!2d47.47724216267545!3d-18.936756197048!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2smg!4v1711766015659!5m2!1sfr!2smg" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
