--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -61,10 +61,10 @@
                             </div>                     
                             <div class="form-row">
                                 <label for="message">Message</label>
-                                <textarea name="message" class="form-control"></textarea>
+                                <textarea name="message" id="message" class="form-control"></textarea>
                             </div>
                             <div class="form-row">                                
-                                <input type="checkbox" name="newsletter" id="newsletter" class="form-control" />
+                                <input type="checkbox" name="newsletter" id="newsletter" class="form-checkbox" />
                                 <label for="newsletter">Please subscribe me to the monthly newsletter.</label>
                             </div> 
                         </fieldset>
@@ -72,7 +72,7 @@
                     </form>
                 </div>
                 <div class="company-info p-20">
-                    <h2>Company information</h2>
+                    <h2 class="pb-50 mb-25">Company information</h2>
                     
                     <p>
                         <em>Address:</em> Lot III I 110 Soanierana
@@ -89,7 +89,7 @@
             <section class="map mt-50">
                 <h2>Map</h2>
                 <div class="map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7547.757685288192!2d47.47724216267545!3d-18.936756197048!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2smg!4v1711766015659!5m2!1sfr!2smg" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7547.757685288192!2d47.47724216267545!3d-18.936756197048!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2smg!4v1711766015659!5m2!1sfr!2smg" width="940" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </section>
             <section class="employee mt-50">
