--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <meta charset="UTF-8" />
+        <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
         <title>Contact Us Blue Orange Rafting Company | W03 assignment</title>
         <meta name="description" content="Contact Us Blue Orange Rafting Company - Rafting W03 - WDD130" />
@@ -55,9 +55,9 @@
                             </div>       
                             <div class="form-row">
                                 <label for="purpose">Choose a purpose of the message: </label>
-                                <input type="radio" name="purpose" id="purpose" value="general-inquiry" class="form-checkbox" /> General inquiry 
-                                <input type="radio" name="purpose" value="reservation-question" class="form-checkbox" /> Reservation Question
-                                <input type="radio" name="purpose" value="website-suggestion" class="form-checkbox" /> Website suggestion
+                                <input type="radio" name="purpose"  value="general-inquiry" class="form-checkbox" id="general-inquiry" /> <label for="general-inquiry">General inquiry</label>
+                                <input type="radio" name="purpose" value="reservation-question" class="form-checkbox" id="reservation-question" /> <label for="reservation-question">Reservation Question</label>
+                                <input type="radio" name="purpose" value="website-suggestion" class="form-checkbox" id="website-suggestion" /> <label for="website-suggestion">Website suggestion</label>
                             </div>                     
                             <div class="form-row">
                                 <label for="message">Message</label>
@@ -68,7 +68,9 @@
                                 <label for="newsletter">Please subscribe me to the monthly newsletter.</label>
                             </div> 
                         </fieldset>
-                        <input type="submit" class="btn btn-primary mt-10 text-right" />
+                        <button type="button" class="btn btn-primary mt-10 text-right">
+                            Send
+                        </button>
                     </form>
                 </div>
                 <div class="company-info p-20">
@@ -89,7 +91,7 @@
             <section class="map mt-50">
                 <h2>Map</h2>
                 <div class="map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7547.757685288192!2d47.47724216267545!3d-18.936756197048!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2smg!4v1711766015659!5m2!1sfr!2smg" width="940" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7547.757685288192!2d47.47724216267545!3d-18.936756197048!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2smg!4v1711766015659!5m2!1sfr!2smg" width="940" height="450" class="map" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </section>
             <section class="employee mt-50">
