--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Contact Us Blue Orange Rafting Company | W03 assignment</title>
         <meta name="description" content="Contact Us Blue Orange Rafting Company - Rafting W03 - WDD130" />
         <meta name="author" content="Mickael Randriamihaja" />
