--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -54,7 +54,7 @@
                                 <input type="email" name="usermail" id="usermail" class="form-control" placeholder="User's email address" />
                             </div>       
                             <div class="form-row">
-                                <label for="purpose">Choose a purpose of the message: </label>
+                                <label for="purpose">Choose a purpose of the message: </label><br>
                                 <input type="radio" name="purpose"  value="general-inquiry" class="form-checkbox" id="general-inquiry" /> <label for="general-inquiry">General inquiry</label>
                                 <input type="radio" name="purpose" value="reservation-question" class="form-checkbox" id="reservation-question" /> <label for="reservation-question">Reservation Question</label>
                                 <input type="radio" name="purpose" value="website-suggestion" class="form-checkbox" id="website-suggestion" /> <label for="website-suggestion">Website suggestion</label>
