--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -68,8 +68,8 @@
                                 <label for="newsletter">Please subscribe me to the monthly newsletter.</label>
                             </div> 
                         </fieldset>
-                        <button type="button" class="btn btn-primary mt-10 text-right">
-                            Send
+                        <button type="submit" class="btn btn-primary mt-10 text-right">
+                            Send Request
                         </button>
                     </form>
                 </div>
