--- a/wwr/index.html
+++ b/wwr/index.html
@@ -38,7 +38,7 @@
             </nav>
         </header>
         <main>
-            <div class="hero mb-25">                
+            <div class="hero">                
                 <article>
                     <figure>
                         <img src="images/hero-happy-client.jpg" alt="Happy Client" />
