--- a/wwr/about.html
+++ b/wwr/about.html
@@ -45,7 +45,13 @@
                         <img src="images/adventure-5.jpg" alt="About Us - Blue Water Rafting Company " />
                         <figcaption>Happy client<br>
                             Make client happy and memorize activities for long time<br />
-                            <a href="https://www.freepik.com/free-vector/customer-giving-quality-feedback_8270988.htm#query=happy%20customer&position=29&from_view=keyword&track=ais&uuid=ba2d8d0d-64b1-429b-b474-7be91b9b00fc">Image by pch.vector</a> on Freepik</figcaption>
+                            <br />
+                            <br />
+                            <a href="contact.html" class="btn btn-primary btn-border">Contact us</a>
+                            <br />
+                            <br />
+                            <a href="https://www.freepik.com/free-vector/customer-giving-quality-feedback_8270988.htm#query=happy%20customer&position=29&from_view=keyword&track=ais&uuid=ba2d8d0d-64b1-429b-b474-7be91b9b00fc">Image by pch.vector</a> on Freepik
+                        </figcaption>
                     </figure>
                 </article>                
             </div>
