--- a/wwr/index.html
+++ b/wwr/index.html
@@ -111,7 +111,7 @@
             <div class="w-960 prelinks p-20">
                 <a href="https://micrand.github.io/wdd130/wwr/images/wireframe/wireframe-home.jpg" target="_blank">Home Wireframe</a> | 
                 <a href="https://micrand.github.io/wdd130/wwr/images/wireframe/wireframe-about.jpg" target="_blank">About Wireframe</a> | 
-                <a href="https://micrand.github.io/wdd130/wwr/images/wireframe/wireframe-trip.jpg">Trip Wireframe</a>
+                <a href="https://micrand.github.io/wdd130/wwr/images/wireframe/wireframe-trip.jpg" target="_blank">Trip Wireframe</a>
             </div>
             <div class="container w-960 border-light">
                 <p>©2024 🌴 Rafting Site plan 🌴 Mickael Randriamihaja 🌴 WDD 130</p>
