--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -145,10 +145,9 @@
         </main>
         <footer>
             <div class="w-960 prelinks p-20">
-                <a href="index.html">Home</a> | 
-                <a href="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-home.png" target="_blank">Wireframe home page</a> | 
-                <a href="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-aboutus-update.png">Wireframe About Us</a> | 
-                <a href="contact.html">Contact us</a>
+                <a href="https://micrand.github.io/wdd130/wwr/images/wireframe/wireframe-home.jpg" target="_blank">Home Wireframe</a> | 
+                <a href="https://micrand.github.io/wdd130/wwr/images/wireframe/wireframe-about.jpg" target="_blank">About Wireframe</a> | 
+                <a href="https://micrand.github.io/wdd130/wwr/images/wireframe/wireframe-trip.jpg" target="_blank">Trip Wireframe</a>
             </div>
             <div class="container w-960 border-light">
                 <p>©2024 🌴 Rafting Site plan 🌴 Mickael Randriamihaja 🌴 WDD 130</p>
