W07 - Final project change

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -96,10 +96,11 @@
                 <div class="newsletter pb-50">
                     <form class="form-newsletter">
                         <label for="name">
+                            
                             <input type="text" name="name" id="name" placeholder="Your Name" class="form-input" />
                         </label>
                         <label for="email">
-                            <input type="email" name="email" placeholder="Email address" class="form-input" />
+                            <input type="email" name="email" id="emali" placeholder="Email address" class="form-input" />
                         </label>
                         <input type="submit" value="Subscribe !" class="btn btn-primary" />
                     </form>
