--- a/wwr/about.html
+++ b/wwr/about.html
@@ -40,10 +40,10 @@
         <main class="about">
             <div class="hero">                
                 <h1>Blue Water Rafting company - About Us</h1>
-                <article>
+                <article>                    
                     <figure>
                         <img src="images/adventure-5.jpg" alt="About Us - Blue Water Rafting Company " />
-                        <figcaption>Happy client<br>
+                        <figcaption><h2>Happy client </h2>
                             Make client happy and memorize activities for long time<br />
                             <br />
                             <br />
